--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "chart.js": "^2.9.4",
-    "firebase-tools": "^9.8.0",
-    "leaflet": "^1.7.1",
+    "firebase-tools": "^11.8.1",
+    "leaflet": "^1.8.0",
     "numeral": "^2.0.6",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^2.11.1",
-    "react-countup": "^4.3.3",
-    "react-dom": "^17.0.1",
-    "react-leaflet": "^3.1.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "react-countup": "^6.3.1",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
